--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clsx": "^2.1.0",
     "firebase": "^10.11.0",
     "lucide-react": "^0.370.0",
-    "next": "14.2.2",
+    "next": "^14.2.2",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
