--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "firebase": "^10.11.0",
+    "firebase-admin": "^12.1.0",
+    "firebase-functions": "^4.9.0",
     "lucide-react": "^0.370.0",
     "next": "^14.2.2",
     "react": "^18",
