--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ firebase-debug.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# resources
+/public/bird
+
+# dev-pages
+Awaken.tsx
+Hidden.tsx
