--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "firebase": "^10.11.0",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^4.9.0",
