--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@techstark/opencv-js": "^4.9.0-release.3",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
@@ -24,6 +25,7 @@
     "next": "^14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-loading-skeleton": "^3.4.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
