--- a/firebase.json
+++ b/firebase.json
@@ -20,6 +20,10 @@
         "destination": "/Register.html"
       },
       {
+        "source": "/Notice",
+        "destination": "/Notice.html"
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
